# rustray

./: .gitignore  BUILD_TARGETS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  FLOW_J_IMPLEMENTATION.md  FUTURE_IMPLEMENTATION_PLAN.md  GRPC_API_INTEGRATION.md  GRPC_SMOKE_TEST.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  TESTING_GUIDE.md  build.rs  check_size  check_size.c  config.example.json  config_grpc_test.json  config_rustray_client_to_rustray_legacy.json  config_rustray_server.json  config_xray_client_to_rustray.json  install.sh  run_verification.sh  test_kx.rs  test_quinn.rs  todolist.md  u00261
.github/workflows/: build.yml
assets/decoy/: digikala.html  irna.html  mellat.html  tejarat.html
benches/: brutal_pacing_bench.rs  dist_performance.rs  dns_codec_bench.rs  ebpf_fragmentation_bench.rs  fec_encoding_bench.rs  ffi_latency.rs  ffi_overhead.rs  final_payload.rs  final_performance.rs  geo_lookup.rs  geo_mmap_vs_vec.rs  kernel_overhead.rs  multiport_overhead.rs  packet_loop_throughput.rs  protocol_overhead.rs  protocols.rs  relay_throughput.rs  routing_memory_usage.rs  stealth_overhead.rs  telemetry_overhead.rs  timing_entropy.rs  utls_bench.rs  vision_handshake.rs
debian/: postinst  postrm  prerm  rustray.service
fuzz/: Cargo.toml
fuzz/fuzz_targets/: flowj_parser.rs  vless_decode.rs  vless_fuzz.rs  vless_parser.rs  vmess_aead.rs
openwrt/: Makefile  rustray.init
openwrt/files/: rustray.init  rustray.uci
proto/: common.proto  common_protocol.proto  common_serial.proto  flow-j.proto  hysteria2.proto  log.proto  observatory.proto  proxyman.proto  reality.proto  router.proto  rustray.proto  service.proto  stats.proto  transport.proto  trojan.proto  tuic.proto  vless.proto  vmess.proto  warp.proto  wiregaurd.proto
scripts/: build_all.sh  leak_test.sh  memory_test.sh  verify_builds.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  panic_handler.rs  router.rs  speedtest.rs
src/adapters/: mod.rs  uds_manager.rs
src/android/: jni.rs  mod.rs
src/api/: audit_middleware.rs  auth_middleware.rs  diagnostics_api.rs  embedded_assets.rs  handler.rs  handlers.rs  headless.rs  mod.rs  server.rs  signaling.rs  speedtest_api.rs  stats.rs  users.rs
src/app/: behavior_synth.rs  connection_tracker.rs  core_manager.rs  diagnostics.rs  dns_logger.rs  log_collector.rs  logging.rs  mod.rs  platform_paths.rs  schema.rs  secure_storage.rs  signaling.rs  sniffer.rs  state.rs  state_manager.rs  subscription_fetcher.rs  tls_forensics.rs
src/app/assets/: updater.rs
src/app/dns/: fakedns.rs  mod.rs
src/app/mesh/: bridge.rs  discovery.rs  health.rs  mod.rs  peer_registry.rs
src/app/metrics/: mod.rs  prober.rs
src/app/observatory/: mod.rs
src/app/policy/: mod.rs
src/app/reverse/: mod.rs  nat.rs  session.rs
src/app/router/: assets.rs  compiler.rs  geo_loader.rs  matcher.rs  mod.rs
src/app/stats/: mod.rs
src/bpf/: mod.rs  xdp_ghoststream.rs  xdp_jitter.rs
src/db/: manager.rs  mod.rs
src/fec/: mod.rs  rs.rs  transport.rs
src/ffi/: desktop.rs  mobile.rs  mod.rs
src/inbounds/: dokodemo.rs  http.rs  mod.rs  nginx_decoy.rs  reverse_portal.rs  socks.rs
src/ios/: mod.rs  tun.rs
src/jobs/: billing.rs  mod.rs  traffic_reset.rs  watchdog.rs
src/kernel/: ebpf_loader.rs  ebpf_program.rs  ghoststream.rs  mod.rs
src/orchestrator/: manager.rs  mod.rs  probe.rs
src/outbounds/: blackhole.rs  freedom.rs  mod.rs  reverse_bridge.rs  ssh_outbound.rs  tailscale_outbound.rs  tor_outbound.rs
src/p2p/: conduit.rs  mod.rs  relay.rs
src/plugin/: mod.rs  sip003.rs
src/protocols/: error.rs  flow.rs  flow_j.rs  flow_trait.rs  http_proxy.rs  hysteria2.rs  mod.rs  naive.rs  shadowsocks_2022.rs  shadowsocks_stream.rs  stealth.rs  trojan.rs  tuic.rs  vless.rs  vless_vision.rs  vmess.rs  wireguard.rs
src/scanner/: beacon_scanner.rs  cloudflare.rs  dns.rs  mod.rs
src/security/: mod.rs  pii_filter.rs
src/transport/: beacon_scanner.rs  brutal_cc.rs  db_mimic.rs  desync.rs  dns_codec.rs  dns_tunnel.rs  ech.rs  flow_j_brutal.rs  flow_j_cdn.rs  flow_j_fec.rs  flow_j_mqtt.rs  flow_j_multiport.rs  flow_j_reality.rs  ghost_bucket.rs  grpc.rs  jitter.rs  mkcp.rs  mod.rs  mqtt.rs  mqtt_parasite.rs  mux.rs  paqet.rs  pqc.rs  prefix_stream.rs  quic.rs  reality.rs  s3_bridge.rs  s3_codec.rs  slipstream.rs  speed_tester.rs  splice.rs  splithttp.rs  stats.rs  tls.rs  tls_camouflage.rs  tls_fragment.rs  tproxy.rs  udp_fallback.rs  utls.rs  websocket.rs
src/tun/: mod.rs  packet_queue.rs  packet_router.rs  tun2socks.rs  tun_device.rs
src/types/: migration.rs  mod.rs  parser.rs
systemd/: rustray.service
tests/: admin_api_test.rs  asset_hot_reload.rs  brutal_quic_test.rs  chaos_resilience.rs  desync_http_tls_test.rs  dns_tunnel_test.rs  ebpf_fragmentation_test.rs  ebpf_integrity.rs  fakedns_test.rs  fec_recovery_test.rs  ffi_stealth_test.rs  ffi_unification_test.rs  fingerprint_audit.rs  flow_j_stealth.rs  fuzz_vless.rs  grpc_integration.rs  handshake_forensics_test.rs  headless_api_test.rs  headless_embedded_test.rs  headless_static_test.rs  integration.rs  lite_store_test.rs  matcher_bench.rs  mesh_discovery_test.rs  mesh_resilience_test.rs  mkcp_integration.rs  network_switch_stress.rs  orchestrator_test.rs  p2p_relay_test.rs  phase10_mesh_intelligence_test.rs  production_ready_test.rs  production_ui_test.rs  reality_parity_test.rs  reality_verify.rs  router_performance_test.rs  rutls_fingerprint_test.rs  rutls_handshake_test.rs  scanner_accuracy.rs  signaling_stress.rs  sip003_env_test.rs  (+5 more)
